--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "gsap": "^3.12.5",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "vue3-carousel": "^0.3.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
