--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "gsap": "^3.12.5",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3",
