--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gabini_store",
-  "version": "0.0.0",
+  "name": "gabini",
   "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "gsap": "^3.12.5",
-    "vue": "^3.4.29",
-    "vue-router": "^4.3.3",
-    "vue3-carousel": "^0.3.4"
+    "vue": "^3.5.12",
+    "vue-router": "^4.4.5",
+    "vue3-carousel": "^0.5.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.5",
-    "vite": "^5.3.1"
+    "@vitejs/plugin-vue": "^5.1.4",
+    "vite": "^5.4.10"
   }
 }
